feat: new jokesByID endpoint
